--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@u-wave/react-youtube": "^0.7.2",
     "add": "^2.0.6",
     "antd": "^4.16.10",
     "axios": "^0.21.1",
